<resources>
    <string name="app_name">校园交易平台</string>
    <string name="home">home</string>
    <string name="message">message</string>
    <string name="person">person</string>
    <string name="hello_home">Hello home</string>
    <string name="hello_message">hello message</string>
    <string name="hello_person">Hello person</string>
    <string name="item_title">Item title</string>
    <string name="rmb">¥：100 RMB</string>
    <string name="loading">登陆</string>
    <string name="register">注册</string>
    <string name="username">用户名：</string>
    <string name="password">密码：</string>
    <string name="schoolname">学校名称：</string>
    <string name="schoolid">学号</string>
    <string name="telephone">电话：</string>
    <string name="password2">确认密码：</string>
    <string name="account_number_text">账号:</string>
    <string name="user_password_text">密码:</string>
    <string name="logon_text">登陆</string>
    <string name="register_text">注册</string>
    <string name="forget_password_text">忘记密码</string>
    <string name="back">返回</string>
    <string name="clean">清除</string>
    <string name="logout">退出登陆</string>
    <string name="changeInfo">修改信息</string>
    <string name="additem">上架商品</string>
    <string name="about">关于</string>
    <string name="todo">TODO</string>
    <string name="transaction">交易数量：</string>
    <string name="item_name">商品名称：</string>
    <string name="iteminfo">商品描述：</string>
    <string name="itemprice">商品价格：</string>
    <string name="addsure">确认上架</string>
    <string name="myitems">我的商品</string>
<<<<<<< HEAD
    <string name="buy">请求购买</string>
    <string name="currentbuyer">当前购买者：</string>
    <string name="usrebuy">确认购买</string>
    <string name="cleanbuyer">清除申请</string>
    <string name="schoolplace">学校：</string>
    <string name="user">用户：</string>
    <string name="yuan">元</string>
=======
    <string name="user_name_">用户名-1</string>
>>>>>>> 899471f4e1eb29534d167b2735f1cae2780730f1
</resources>
